# Aurexalis

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: android-build.yml  release.yml  rust.yml  security.yml
browser/chrome/: aurexalis-00-core.uc.js  aurexalis-01-brand.uc.js  aurexalis-02-blocker.uc.js  aurexalis-03-sound.uc.js  aurexalis-04-settings-panel.uc.js  aurexalis-05-sidebar.uc.js  aurexalis-06-settings-inject.uc.js  aurexalis-07-cws-brand.uc.js  aurexalis-home.uc.js  aurexalis-sidebar.uc.js  aurexalis-sound.uc.js  userChrome.css  userChrome.js
browser/chrome/sounds/: README.md
browser/home/: home.css  home.js  index.html
browser/policies/: policies.json.example
browser/prefs/: user.js
browser/settings/: index.html  settings.css  settings.js
crates/aurexalis-blocker/: Cargo.toml
crates/aurexalis-blocker/src/: lib.rs
crates/aurexalis-core/: Cargo.toml
crates/aurexalis-core/src/: lib.rs
crates/aurexalis-importer/: Cargo.toml
crates/aurexalis-importer/src/: gecko_cookies.rs  gecko_passwords.rs  gecko_write.rs  lib.rs  linux_crypt.rs
crates/aurexalis-installer/: Cargo.toml  build.rs
crates/aurexalis-installer/src/: i18n.rs  license_text.rs  main.rs  theme.rs
crates/aurexalis-installer/src/install/: chromium.rs  engine_brand.rs  floorp.rs  github.rs  mod.rs  profile.rs  windows.rs
crates/aurexalis-remotefs/: Cargo.toml
crates/aurexalis-remotefs/src/: ftp.rs  lib.rs  sftp.rs
crates/aurexalis-shell/: Cargo.toml
crates/aurexalis-shell/src/: blocker_cmd.rs  config.rs  import_cmd.rs  main.rs  remotefs_cmd.rs
docs/: ARCHITECTURE.md  BLOCKER_GECKO_HOOK.md  BUILD_AND_RELEASE.md  CWS_PORT.md  FLOORP_INTEGRATION.md  IMPORT_PASSWORDS.md  INSTALLER.md  QUALITY.md  REBRAND.md  REMOTE_FS.md  ROADMAP.md  SECURITY.md  TESTING.md  UI.md  dependabot-followups.md
docs/adr/: 0001-floorp-gecko-base.md  0002-local-first-profile-import.md  0003-remotefs-without-os-mount.md  0004-floorp-as-submodule.md
mobile/: README.md
mobile/android/: settings.gradle.kts
mobile/android/app/: build.gradle.kts  proguard-rules.pro
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/aurexalis/browser/: AurexalisApp.kt  AurexalisPrefs.kt  MainActivity.kt
mobile/android/app/src/main/java/org/aurexalis/browser/import/: ImportBridge.kt
mobile/android/app/src/main/res/drawable/: ic_launcher_foreground.xml  url_bar_bg.xml
mobile/android/app/src/main/res/layout/: activity_main.xml
mobile/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
mobile/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile/docs/: ANDROID_IMPORT.md
patches/cws/: README.md
tools/: aurexalis-build.ps1  bootstrap-android.ps1  brand-engine.ps1  floorp-status.ps1  gen_installer_icon.py  init-floorp-submodule.ps1  package-linux.sh  package-runtime.ps1  rebrand-existing-install.ps1  setup-android-sdk.ps1  sync-mobile-assets.ps1  sync-mobile-assets.sh  verify-browser-pack.ps1
