[package]
name = "aurexalis-importer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aurexalis-core = { path = "../aurexalis-core" }
aes-gcm = "0.10.3"
base64 = "0.22.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"

[target.'cfg(windows)'.dependencies]
windows-dpapi = "0.2.0"

[lints]
workspace = true
