[package]
name = "aurexalis-importer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aurexalis-core = { path = "../aurexalis-core" }
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
pbkdf2 = "0.12.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sha1 = "0.10.6"

[target.'cfg(windows)'.dependencies]
windows-dpapi = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = "3.6.1"

[lints]
workspace = true
