[package]
name = "aurexalis-importer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aurexalis-core = { path = "../aurexalis-core" }
aes = "0.9.1"
aes-gcm = "0.11.0"
base64 = "0.22.1"
cbc = { version = "0.2.1", features = ["alloc"] }
pbkdf2 = "0.13.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sha1 = "0.11.0"

[target.'cfg(windows)'.dependencies]
windows-dpapi = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = "4.1.4"

[lints]
workspace = true
