[package]
name = "aurexalis-installer"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Instalador grafico de Aurexalis para Windows"

[[bin]]
name = "Aurexalis-Setup"
path = "src/main.rs"

[dependencies]
aurexalis-importer = { path = "../aurexalis-importer" }
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.31"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.140"
zip = "2.2.3"
dirs = "6.0.0"
rfd = "0.15.4"

[build-dependencies]
winres = "0.1.12"

[lints]
workspace = true
