[package]
name = "aurexalis-remotefs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
suppaftp = { version = "8.0.2", default-features = false, features = ["native-tls-vendored", "secure", "deprecated"] }
[lints]
workspace = true
