[package]
name = "aurexalis-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "aurexalis"
path = "src/main.rs"

[dependencies]
aurexalis-importer = { path = "../aurexalis-importer" }
aurexalis-remotefs = { path = "../aurexalis-remotefs" }

[lints]
workspace = true
