[package]
name = "aurexalis-shell"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "aurexalis"
path = "src/main.rs"

[dependencies]
aurexalis-importer = { path = "../aurexalis-importer" }
aurexalis-remotefs = { path = "../aurexalis-remotefs" }
serde_json = "1.0.140"

[lints]
workspace = true
